# advent-of-code

./: .env.example  .gitignore  README.md
2015/days/02/: README.md
2015/days/04/: README.md
2015/days/07/: README.md
2015/days/08/: README.md
2015/days/09/: README.md
2015/days/13/: README.md
2015/days/14/: README.md
2015/days/15/: README.md
2015/days/16/: README.md
2015/days/18/: README.md
2015/days/19/: README.md
2015/days/20/: README.md
2015/days/21/: README.md
2015/days/22/: README.md
2015/days/23/: README.md
2015/days/24/: README.md
2015/days/25/: README.md
2015/days/day01/: README.md
2015/days/day03/: README.md
2015/days/day05/: README.md
2015/days/day06/: README.md
2015/days/day07/: README.md
2015/days/day09/: README.md
2015/days/day10/: README.md
2015/days/day11/: README.md
2015/days/day12/: README.md
2015/days/day13/: README.md
2015/days/day15/: README.md
2015/days/day16/: README.md
2015/days/day17/: README.md
2015/days/day18/: README.md
2015/days/day19/: README.md
2015/days/day20/: README.md
2015/days/day21/: README.md
2015/days/day22/: README.md
2015/days/day23/: README.md
2015/days/day24/: README.md
2015/days/day25/: README.md
2016/days/01/: README.md
2016/days/02/: README.md
2016/days/05/: README.md
2016/days/06/: README.md
2016/days/08/: README.md
2016/days/09/: README.md
2016/days/10/: README.md
2016/days/11/: README.md
2016/days/12/: README.md
2016/days/13/: README.md
2016/days/14/: README.md
2016/days/15/: README.md
2016/days/17/: README.md
2016/days/18/: README.md
2016/days/19/: README.md
2016/days/20/: README.md
2016/days/21/: README.md
2016/days/22/: README.md
2016/days/23/: README.md
2016/days/24/: README.md
2016/days/25/: README.md
2016/days/day02/: README.md
2016/days/day03/: README.md
2016/days/day04/: README.md
2016/days/day05/: README.md
2016/days/day06/: README.md
2016/days/day07/: README.md
2016/days/day08/: README.md
2016/days/day09/: README.md
2016/days/day10/: README.md
2016/days/day11/: README.md
2016/days/day12/: README.md
2016/days/day13/: README.md
2016/days/day14/: README.md
2016/days/day15/: README.md
2016/days/day16/: README.md
2016/days/day17/: README.md
2016/days/day18/: README.md
2016/days/day19/: README.md
2016/days/day20/: README.md
2016/days/day22/: README.md
2016/days/day23/: README.md
2016/days/day24/: README.md
2016/days/day25/: README.md
2017/days/01/: README.md
2017/days/02/: README.md
2017/days/03/: README.md
2017/days/04/: README.md
2017/days/05/: README.md
2017/days/07/: README.md
2017/days/08/: README.md
2017/days/09/: README.md
2017/days/10/: README.md
2017/days/11/: README.md
2017/days/12/: README.md
2017/days/13/: README.md
2017/days/14/: README.md
2017/days/15/: README.md
2017/days/16/: README.md
2017/days/17/: README.md
2017/days/18/: README.md
2017/days/19/: README.md
2017/days/20/: README.md
2017/days/21/: README.md
2017/days/22/: README.md
2017/days/23/: README.md
2017/days/24/: README.md
2017/days/25/: README.md
2017/days/day01/: README.md
2017/days/day02/: README.md
2017/days/day03/: README.md
2017/days/day05/: README.md
2017/days/day06/: README.md
2017/days/day07/: README.md
2017/days/day08/: README.md
2017/days/day09/: README.md
2017/days/day10/: README.md
2017/days/day11/: README.md
2017/days/day12/: README.md
2017/days/day13/: README.md
2017/days/day14/: README.md
2017/days/day15/: README.md
2017/days/day17/: README.md
2017/days/day18/: README.md
2017/days/day19/: README.md
2017/days/day20/: README.md
2017/days/day21/: README.md
2017/days/day22/: README.md
2017/days/day23/: README.md
2017/days/day24/: README.md
2017/days/day25/: README.md
2018/days/01/: README.md
2018/days/03/: README.md
2018/days/04/: README.md
2018/days/05/: README.md
2018/days/06/: README.md
2018/days/07/: README.md
2018/days/08/: README.md
2018/days/09/: README.md
2018/days/10/: README.md
2018/days/11/: README.md
2018/days/12/: README.md
2018/days/13/: README.md
2018/days/14/: README.md
2018/days/15/: README.md
2018/days/16/: README.md
2018/days/17/: README.md
2018/days/18/: README.md
2018/days/19/: README.md
2018/days/20/: README.md
2018/days/22/: README.md
2018/days/23/: README.md
2018/days/24/: README.md
2018/days/25/: README.md
2018/days/day02/: README.md
2018/days/day03/: README.md
2018/days/day04/: README.md
2020/: day_10.js  day_6.js  day_9.js
2020/haskell/: aoc.cabal  hie.yaml  stack.yaml
2020/js/: day_02.js  day_08.js  day_16.js  day_17.js  day_5.js  day_6.js  day_7.js
2020/solution/haskell/: haskell.cabal  stack.yaml
2020/solution/haskell/common/: Parsers.hs
2020/solution/haskell/day01/: Part2.hs
2020/solution/haskell/day02/: Part1.hs
2020/solution/haskell/day03/: Part1.hs
2020/solution/haskell/days/01/: Main.hs
2020/solution/haskell/days/02/: Main.hs
2020/solution/haskell/days/03/: Main.hs
2020/solution/haskell/tests/: doctests.hs
2021/inputs/: day01.txt
2021/solution/haskell/: .gitignore  Common.hs  Day01.hs  Day02.hs  Day03.hs  DayXX_tpl.hs  README.md  doctests.hs  haskell.cabal  hie.yaml  report.html  run
2021/solution/haskell/benchmarks/: Day07.hs  Fib.hs
2021/solution/haskell/common/: Common.hs  Parsers.hs  Stack.hs
2021/solution/haskell/days/: Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs  Day07.hs
2021/solution/haskell/days/02/: Main.hs
2021/solution/haskell/days/04/: Main.hs
2021/solution/haskell/days/05/: Main.hs
2021/solution/haskell/days/06/: Main.hs
2021/solution/haskell/days/07/: Main.hs
2021/solution/haskell/days/08/: Main.hs
2021/solution/haskell/days/09/: Main.hs
2021/solution/haskell/days/10/: Main.hs
2021/solution/haskell/days/11/: Main.hs
2021/solution/haskell/days/23/: Main.hs
2021/solution/haskell/tests/: doctests.hs
src/: day_1.js  day_3.js
utils/: complete-day  gen-readme  get-input  init-day  init-day-haskell  init-day-rust
(+312 files in other folders)
