cabal-version:      2.4
name:               aoc
version:            2021

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Ivan Greguric Ortolan
maintainer:         ivan.g.ortolan@gmail.com

-- A copyright notice.
-- copyright:
-- category:

source-repository head
  type: git
  location: https://github.com/ntrp/advent-of-code/2021/solution/haskell

library
  hs-source-dirs:      common
  default-language:    Haskell2010

  exposed-modules:
    Common,
    Stack,
    Parsers

  build-depends:
    base     ^>= 4.15,
    parsec   ^>= 3.1.15.0,
    matrix

test-suite doctests
  type:          exitcode-stdio-1.0
  ghc-options:   -threaded
  main-is:       tests/doctests.hs
  default-language:    Haskell2010
  build-depends:
    base,
    doctest        ^>= 0.20,
    directory      ^>= 1.3,
    filepath       ^>= 1.4,

common day
  build-depends:       aoc, base
  default-language:    Haskell2010

executable Day01
  import: day
  main-is: days/01/Main.hs

executable Day02
  import: day
  main-is: days/02/Main.hs

executable Day03
  import: day
  main-is: days/03/Main.hs

executable Day04
  import: day
  main-is: days/04/Main.hs
  build-depends:
    mtl      ^>= 2.2.2

executable Day05
  import: day
  main-is: days/05/Main.hs

executable Day06
  import: day
  main-is: days/06/Main.hs
  build-depends:
    mtl      ^>= 2.2.2,
    vector   ^>= 0.12.3.1

executable Day07
  import: day
  main-is: days/07/Main.hs

benchmark Day07Bench
  type:             exitcode-stdio-1.0
  main-is:          benchmarks/Day07.hs
  build-depends:    aoc,
                    base,
                    criterion,
                    random,

  ghc-options:      -Wall
                    -O2

executable Day08
  import: day
  main-is: days/08/Main.hs

executable Day09
  import: day
  main-is: days/09/Main.hs
  build-depends:    matrix,
                    containers,
                    mtl

executable Day10
  import: day
  main-is: days/10/Main.hs

executable Day11
  import: day
  main-is: days/11/Main.hs
  build-depends:    mtl

executable Day12
  import: day
  main-is: days/12/Main.hs

executable Day13
  import: day
  main-is: days/13/Main.hs

executable Day14
  import: day
  main-is: days/14/Main.hs

executable Day15
  import: day
  main-is: days/15/Main.hs

executable Day16
  import: day
  main-is: days/16/Main.hs

executable Day17
  import: day
  main-is: days/17/Main.hs

executable Day18
  import: day
  main-is: days/18/Main.hs

executable Day19
  import: day
  main-is: days/19/Main.hs

executable Day20
  import: day
  main-is: days/20/Main.hs

executable Day21
  import: day
  main-is: days/21/Main.hs

executable Day22
  import: day
  main-is: days/22/Main.hs

executable Day23
  import: day
  main-is: days/23/Main.hs

executable Day24
  import: day
  main-is: days/24/Main.hs

executable Day25
  import: day
  main-is: days/25/Main.hs

benchmark Fib
  type:             exitcode-stdio-1.0
  main-is:          benchmarks/Fib.hs
  build-depends:    aoc,
                    base,
                    criterion,
                    random,

  ghc-options:      -Wall
                    -O2
